--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2024"
 [dependencies]
 clap = { version = "4.5.52", features = ["derive"] }
 itertools = "0.14.0"
+unicode-normalization = "0.1.25"
